language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_does_not_produce_zero_values_for_recursively_defined_constructors_2.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wobble {\n  Wobble(inside: Wibble)\n  Womble(a: Int, b: Int)\n}\n\npub type Wibble {\n  Wibble(inside: Wobble)\n  Wimble(a: Int, b: Int)\n}\n    "
---
----- BEFORE ACTION

pub type Wobble {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wobble(inside: Wibble)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Womble(a: Int, b: Int)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑

pub type Wibble {
  Wibble(inside: Wobble)
  Wimble(a: Int, b: Int)
}
    


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wobble {
  Wobble(inside: Wibble)
  Womble(a: Int, b: Int)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> {
      use inside <- decode.field("inside", todo as "Decoder for Wibble")
      decode.success(Wobble(inside:))
    }
    "womble" -> {
      use a <- decode.field("a", decode.int)
      use b <- decode.field("b", decode.int)
      decode.success(Womble(a:, b:))
    }
    _ -> decode.failure(todo as "Zero value for Wobble", "Wobble")
  }
}

pub type Wibble {
  Wibble(inside: Wobble)
  Wimble(a: Int, b: Int)
}
