language-server/src/tests/snapshots/gleam_language_server__tests__action__generate_dynamic_decoder_generates_todo_for_zero_value_when_all_constructors_fail.snap
---
source: language-server/src/tests/action.rs
expression: "\npub type Wobble {\n  Wobble(nope: Wobble)\n  Wibble(not: Int, again: Wobble)\n}\n    "
---
----- BEFORE ACTION

pub type Wobble {
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wobble(nope: Wobble)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
  Wibble(not: Int, again: Wobble)
▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔
}
↑
    


----- AFTER ACTION
import gleam/dynamic/decode

pub type Wobble {
  Wobble(nope: Wobble)
  Wibble(not: Int, again: Wobble)
}

fn wobble_decoder() -> decode.Decoder(Wobble) {
  use variant <- decode.field("type", decode.string)
  case variant {
    "wobble" -> {
      use nope <- decode.field("nope", wobble_decoder())
      decode.success(Wobble(nope:))
    }
    "wibble" -> {
      use not <- decode.field("not", decode.int)
      use again <- decode.field("again", wobble_decoder())
      decode.success(Wibble(not:, again:))
    }
    _ -> decode.failure(todo as "Zero value for Wobble", "Wobble")
  }
}
